--- a/gb/23/7/26/n14042131.md
+++ b/gb/23/7/26/n14042131.md
@@ -1,71 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>参山呷凉节 跳舞一夏清凉呷冰</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042132-626589-600x400.jpg" />
 <h6>跳舞一夏免费呷冰（参山国家风景区管理处提供）
 </h6>
 <hr>
-<p>【大纪元2023年07月26日讯】（大纪元记者陈文敏台湾苗栗报导）交通部观光局参山国家风景区管理处配合“2023台湾仲夏<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8%E8%8A%82.md#1">旅游节</a>”活动，于7月22日至8月27日举办“参山呷凉节”，邀请大家到参山6大游客中心跳舞免费呷冰，受到民众热烈欢迎！观光局的“仲夏巡演车”及合作的网红“岱妤”正在今（26）日中午快闪南庄游客中心，现场送出150份好礼，力邀大家南庄慢游！</p>
-<figure id="14042135" aria-describedby="caption-14042135" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14042135-626592-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14042135-626592-450x300.jpg" alt="参山国家风景区管理处举办“参山呷凉节”桂花冰、仲夏旅游节纪念杯及微醺蜜月联名酒(喝酒不开车，开车不喝车)" width="500" /></a><figcaption id="caption-14042135" class="wp-caption-text">参山国家风景区管理处举办“参山呷凉节”桂花冰、仲夏<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8%E8%8A%82.md#1">旅游节</a>纪念杯及微醺蜜月联名酒(喝酒不开车，开车不喝车)（参山国家风景区管理处提供）</figcaption></figure>
+<p>【大纪元2023年07月26日讯】（大纪元记者陈文敏台湾苗栗报导）交通部观光局参山国家风景区管理处配合“2023台湾仲夏旅游节”活动，于7月22日至8月27日举办“参山呷凉节”，邀请大家到参山6大游客中心跳舞免费呷冰，受到民众热烈欢迎！观光局的“仲夏巡演车”及合作的网红“岱妤”正在今（26）日中午快闪南庄游客中心，现场送出150份好礼，力邀大家南庄慢游！</p>
+<figure id="14042135" aria-describedby="caption-14042135" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14042135-626592-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042135-626592-450x300.jpg" alt="参山国家风景区管理处举办“参山呷凉节”桂花冰、仲夏旅游节纪念杯及微醺蜜月联名酒(喝酒不开车，开车不喝车)" width="500" /></a><figcaption id="caption-14042135" class="wp-caption-text">参山国家风景区管理处举办“参山呷凉节”桂花冰、仲夏旅游节纪念杯及微醺蜜月联名酒(喝酒不开车，开车不喝车)（参山国家风景区管理处提供）</figcaption></figure>
 <p>“2023台湾仲夏旅游节”观光局特别规划了“仲夏巡演车计划”，中央全台夏季精选特色活动14场巡演首发，各场次邀请高人气网红部落客等名人参与，现场与民众分享仲夏互动旅游美好体验。网红“岱妤”下午（26）日1点至5点在南庄游客中心附近的广场，出动可爱的仲夏巡回车，现场民众大排长龙，完成吃跳冰舞与网红岱妤合影，现场送桂花冰、仲夏旅游纪念杯及微醺蜜月联名酒，欢迎大家踊跃报名！</p>
 <p>参山处指出，今年“参山呷凉节”活动在6个游客中心特别举办，预计今年送出共9000枝特色冰棒，活动一开始就受到热烈欢迎！26日在南庄游客中心举办加码活动，让群众现场和网红互动并送好礼，以增加活动的趣味性！也期盼僧侣由呷凉节活动，能够吸引更多民众认识参山！例如可以到南庄游客中心，顺游至南庄老街、康济吊桥、十三间老街，或者网红打卡收费-东村宿舍、邻近的神仙谷、蓬莱溪护鱼步道、向天湖赛夏族民俗文物馆等地旅游。</p>
-<p>另外，参山处也推荐大家多利用“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E8%A7%82%E5%B7%B4.md#1">台湾观巴</a>”的套装游程，趁年底前优惠买1送1，相当于4人出游只需2人费用，参山处曼哈顿另外20条套装游程包括如：“浪漫台三线、漫活客庄休闲农游二日”、“南庄向天湖秘境1日游”等，现仅需购买参山处曼哈顿另外20条套装游程，参山加码抽奖送20寸喔熊行李箱等。</p>
+<p>另外，参山处也推荐大家多利用“台湾观巴”的套装游程，趁年底前优惠买1送1，相当于4人出游只需2人费用，参山处曼哈顿另外20条套装游程包括如：“浪漫台三线、漫活客庄休闲农游二日”、“南庄向天湖秘境1日游”等，现仅需购买参山处曼哈顿另外20条套装游程，参山加码抽奖送20寸喔熊行李箱等。</p>
 <p>“参山呷凉节”活动活动从7月22日起至8月27日止，只要到游客中心依指定方式完成跳舞、在“参山国家风景区粉丝专页”按赞，分享贴文，并于粉丝专页活动贴文下标签2位好友，至粉丝中心柜台服务人员出示上传结果，即可免费领取指定点冰品！而且Facebook线上新增码，仅需粉丝参与问答并分享贴文就抽奖送祝愿好礼！请大家不要错过！</p>
 <p>更多资讯，请至参山脸书粉丝专页</p>
 <p>“趣游参山：狮头山梨山八卦山”粉丝专页链接如下：</p>
 <p><ahref="https://zh-tw.facebook.com/trimnt/" target="_blank" rel="noopener noreferrer">https://zh-tw.facebook.com/trimnt/</a></p>
-<p>“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E8%A7%82%E5%B7%B4.md#1">台湾观巴</a>”网站</p>
+<p>“台湾观巴”网站</p>
 <p><ahref="https://www.taiwantourbus.com.tw/C/tw/home" target="_blank" rel="noopener noreferrer">https://www.taiwantourbus.com.tw/C/tw/home</a></p>
-<figure id="14042134" aria-describedby="caption-14042134" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14042134-626591-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14042134-626591-450x300.jpg" alt="跳舞免费呷冰、纪念杯与微醺蜜月联名酒(喝酒不开车，开车不喝酒)" width="500" /></a><figcaption id="caption-14042134" class="wp-caption-text">跳舞免费呷冰、纪念杯与微醺蜜月联名酒(喝酒不开车，开车不喝酒)（参山国家风景区管理处提供）</figcaption></figure>
-<figure id="14042133" aria-describedby="caption-14042133" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14042133-626590-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14042133-626590-450x300.jpg" alt="网红“岱妤”快闪南庄游客中心，揭开参山国家风景区管理处举办“参山呷凉节”序幕，跳舞免费呷冰." width="500" /></a><figcaption id="caption-14042133" class="wp-caption-text">网红“岱妤”快闪南庄游客中心，揭开参山国家风景区管理处举办“参山呷凉节”序幕，跳舞免费呷冰.（参山国家风景区管理处提供）</figcaption></figure>
+<figure id="14042134" aria-describedby="caption-14042134" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14042134-626591-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042134-626591-450x300.jpg" alt="跳舞免费呷冰、纪念杯与微醺蜜月联名酒(喝酒不开车，开车不喝酒)" width="500" /></a><figcaption id="caption-14042134" class="wp-caption-text">跳舞免费呷冰、纪念杯与微醺蜜月联名酒(喝酒不开车，开车不喝酒)（参山国家风景区管理处提供）</figcaption></figure>
+<figure id="14042133" aria-describedby="caption-14042133" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14042133-626590-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042133-626590-450x300.jpg" alt="网红“岱妤”快闪南庄游客中心，揭开参山国家风景区管理处举办“参山呷凉节”序幕，跳舞免费呷冰." width="500" /></a><figcaption id="caption-14042133" class="wp-caption-text">网红“岱妤”快闪南庄游客中心，揭开参山国家风景区管理处举办“参山呷凉节”序幕，跳舞免费呷冰.（参山国家风景区管理处提供）</figcaption></figure>
 <p>责任编辑：唐音</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/8/n13776512.md#1">台北国际夏季旅展将登场 观光局推低碳行旅台湾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/7/n13840793.md#1">苗栗幸福旅游节启动 消费满500抽百万休旅车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/2/n13877386.md#1">梨山光谷节点灯  大雪松、耶稣堂相辉映</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/16/n13886114.md#1">“苗栗幸福旅游节”消费总额逾1亿6千万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919507.md#1">留任交长 王国材：台铁公司化剩最后一哩路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920049.md#1">日旅游节目《跟着SUMMERS散步趣》爆笑登台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020292.md#1">仲夏旅游节开跑 台交长：6百万国际旅客年底可达标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033698.md#1">夏季旅展开跑 观光局推自行车旅游</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055877.md#1">“心游无界”台日工艺特展 竹县美术馆登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055802.md#1">打造智慧校园 县长启动智慧校园亲师生平台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/8/n13776512.md#1">台北国际夏季旅展将登场 观光局推低碳行旅台湾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/7/n13840793.md#1">苗栗幸福旅游节启动 消费满500抽百万休旅车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/2/n13877386.md#1">梨山光谷节点灯  大雪松、耶稣堂相辉映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/16/n13886114.md#1">“苗栗幸福旅游节”消费总额逾1亿6千万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/31/n13919507.md#1">留任交长 王国材：台铁公司化剩最后一哩路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/1/n13920049.md#1">日旅游节目《跟着SUMMERS散步趣》爆笑登台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/21/n14020292.md#1">仲夏旅游节开跑 台交长：6百万国际旅客年底可达标</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/13/n14033698.md#1">夏季旅展开跑 观光局推自行车旅游</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305157.md#1">软式输尿管镜肾内碎石术 恢复快、疼痛低、无伤口</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305037.md#1">卫福部金卓越社区选拔评鉴 参赛7社区展现丰硕成果争取入选</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/17/n10491766.md#1" target="_blank">朝鲜战争锣鼓掩盖下的暴力土改</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/19/n11266537.md#1" target="_blank">聋哑人能说话 瘫痪人迈双腿 亲历者忆神迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052368.md#1">聊斋?山歌罗刹海市 隐喻之弹激起千层浪 马户又鸟知是谁？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051960.md#1">【未解之谜】探秘中国第一神山</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047740.md#1">【古道人生】皇帝因何震怒而将少年科甲的县令处决？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/10/n14051512.md#1">英国小镇成UFO热点 目击事件多达300起</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051916.md#1">媲美米开朗基罗《大卫》：巴洛克艺术家吉安?贝尼尼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055397.md#1">【新唐人快报】女学生被卖缅北 警察不管有隐情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055405.md#1">【新闻大破解】中共现三道裂痕 已破产溃而未崩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045299.md#1">【思想领袖】需遏制大科技公司滥用230条款</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053955.md#1">中植出事 中国信托业面临危机蔓延风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054218.md#1">国安部自曝退休干部拟组敢死队推翻中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054092.md#1">中共暂停公布青年失业率 引发热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053912.md#1">医嘱暂停运动2个月 周润发疑偷偷跑步显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053977.md#1">喊昆凌“三宝妈”遭陆民曲解 周杰伦幽默回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054567.md#1">陆男团粉丝游行效应 刘若英西安演唱会传喊停</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054675.md#1">张国立公司被强制执行452万 邓婕动态引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054531.md#1">专访港导演黄浩然：香港回来时 电影就会回来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054228.md#1">上班假装很忙？ 全球调查：亚洲员工居多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048340.md#1">6招必学控糖法 中医控制糖尿病全攻略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14054952.md#1">苹果公司：睡觉时别在床上替iPhone充电</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053377.md#1">沉迷手机好比嗜赌、嗑药？专家建议这样戒瘾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052614.md#1">吃黄瓜有助降血脂 哪些人不适合吃？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/26/n14042131.htm">参山呷凉节 跳舞一夏清凉呷冰</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042131.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/26/n14042131.htm">参山呷凉节 跳舞一夏清凉呷冰</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/26/n14042131.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
